kubernetes/auth-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-auth-deployment
  namespace: discord 

spec:
  replicas: 3
  selector:
    matchLabels:
      app: discord-auth
  template: 
    metadata:
      labels:
        app: discord-auth
    spec:
      containers:
        - name: discord-auth
          image: dubeyanand/auth-discord:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
