kubernetes/nats-statefull.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  namespace: discord
spec:
  selector:
    matchLabels:
      app: nats
  serviceName: nats
  replicas: 1
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          ports:
          - containerPort: 4222
          - containerPort: 6222
          - containerPort: 8222
          volumeMounts:
          - name: nats-pvc
            mountPath: /data
      volumes:
        - name: nats-pvc
          persistentVolumeClaim:
            claimName: nats-pvc
