kubernetes/pgsql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: discord 

spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-auth-postgresql
  template: 
    metadata:
      labels:
        app: discord-auth-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
