kubernetes/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: discord-auth-service
  namespace: discord
spec:
  selector:
    app: discord-auth
  ports:
  - port: 3000
    targetPort: 3000
