kubernetes/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: discord-ingress
  namespace: discord
spec:
  selector:
    app: discord-ingress
  ports:
  - port: 80
    targetPort: 80
