kubernetes/nats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nats-service
  namespace: discord
spec:
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
